fix: wrap whitespace in cue sheet

--- a/apps/client/src/features/table/Table.module.scss
+++ b/apps/client/src/features/table/Table.module.scss
@@ -121,7 +121,6 @@
     th, td {
       touch-action: auto;
       padding: 4px;
-      white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
     }
